<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".EventCreationFragment">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/create_your_own_event"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Title of Event Section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/titleOfEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:ems="50"

                android:inputType="text"
                android:hint="@string/title_of_even"

                android:textColor="@color/black"
                android:textColorHint="#827717"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <!-- Description of Event Section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/descriptionOfEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:hint="@string/description_of_event"
                android:textColor="@color/black"
                android:textColorHint="#827717"
                android:textSize="20sp"
                android:layout_margin="3dp"
                />

        </androidx.cardview.widget.CardView>

        <!-- Attendee Limit Section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/attendeeLimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/attendee_limit"
                android:inputType="number"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textColorHint="#827717"
                android:layout_margin="3dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/datePickerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="20sp"
                android:layout_margin="3dp"
                android:padding="9dp"
                android:textColor="@color/black"
                android:textColorHint="#827717"
                android:hint="@string/pick_date" />
        </androidx.cardview.widget.CardView>

        <!-- Image Section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:cardCornerRadius="19dp"
            app:cardElevation="4dp">

            <ImageButton
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/lightBlue"
                android:contentDescription="@string/event_poster"
                android:contextClickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/event_image" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:cardCornerRadius="12dp">

            <EditText
                android:id="@+id/locationPickerText"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:ems="10"
                android:hint="@string/pick_location"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="#827717"
                android:textSize="20sp" />

            <Button
                android:id="@+id/locationPickerButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end|center_horizontal"
                android:layout_marginTop="1dp"
                android:background="@drawable/location_icon"
                android:clickable="true" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <Button
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/blue"
                android:clickable="true"
                android:text="@string/upload_poster"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>




        <!-- Confirm Button Section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textSize="20sp"
                android:background="@color/blue"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="1dp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
