...

        <com.google.android.material.tabs.TabItem
            android:id="@+id/eventButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Create  Event"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/myEventsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="My Events" />


        <com.google.android.material.tabs.TabItem
            android:id="@+id/checkInTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Check In" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Profile" />

    </com.google.android.material.tabs.TabLayout>

</RelativeLayout>

