...
    <string name="title_of_even">Title of Event:</string>
    <string name="main_page"><![CDATA[<—Main Page]]></string>
    <string name="create_your_own_event">Create Your Own Event</string>
    <string name="event_poster">Event Poster</string>
    <string name="upload_poster">Upload Poster</string>
    <string name="cancel">cancel</string>
    <string name="Share">Share</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_in_fragment">Check In Fragment</string>
    <string name="first_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">last name</string>
...
    <string name="save">Save</string>
    <string name="event_details_header">Event Details and Poster</string>
    <string name="event_details">Any event details will be displayed here!</string>
    <string name="event_announcements_header">Announcements</string>
    <string name="event_announcements">(It appears that there are currently no announcements to display for this event.)</string>
    <string name="Back">Back</string>
    <string name="browse_all_events_text">Browse All Events</string>
    <string name="browse_my_events_text">My Created Events</string>
    <string name="see_announcements_text">Click here to see announcements</string>
    <string name="sign_up_for_event">Sign up for this event</string>
    <string name="see_details_text">See Event Details</string>
    <string name="checked_in_title_text">Checked in</string>
    <string name="signed_up_title_text">Signed up</string>
    <string name="signed_up_count">There are %1$d attendees signed up to your event.</string>
    <string name="checked_in_count">There are %1$d attendees checked in to your event.</string>
    <string name="go_to_map_text">View check-in locations</string>
    <string name="msg_token_fmt">FCM Registration Token: %1$s</string>
    <string name="my_events">My Signed Up Events</string>

    <string name="Qr_Code_Message">Scan the QR code to check in and enjoy the event !</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="organizerid">OrganizerID: %s\n</string>
    <string name="eventid">EventID: %s\n</string>
...
